message overflow bug fixed

--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -5,6 +5,7 @@ page-chat {
 	    background: color($colors, 'primary');
 	    border-radius: 3px;
 	    margin: 5px;
+	    max-width: 98%;
 	}
 	.username {
 		font-weight: bold;
